# rustos

./: Cargo.toml
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs
tests/: basic_boot.rs  stack_overflow.rs
